Closed Bug 335085 Opened 19 years ago Closed 19 years ago

SVG images showing incorrectly with cairo gfx

Categories

(Core :: SVG, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: tor, Assigned: tor)

References

Details

Attachments

(1 file)

<svg:image> is showing with mixed channels and missing alpha data after some changes to how thebes is storing and returning image data.
Attached patch patchSplinter Review
Temporary fix until we switch to Thebes and not carry around our own copy of the image data.
Attachment #219429 - Flags: review?(jwatt)
*** Bug 335093 has been marked as a duplicate of this bug. ***
Attachment #219429 - Flags: review?(jwatt) → review?(vladimir)
Checked in.
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: