Bug 335085 - SVG images showing incorrectly with cairo gfx.  r=vlad